trunk/Archive2/1e/c1f4690d215a5e/output
main.cpp: In function 'int main()':
main.cpp:24:31: error: cannot convert 'void (Derived::*)(int)' to 'void (Base2::*)(int)' in initialization
     void (Base2::* px)(int) = pd; // It is a tradgedy this cannot be done
                               ^
main.cpp:24:27: warning: unused variable 'px' [-Wunused-variable]
     void (Base2::* px)(int) = pd; // It is a tradgedy this cannot be done
                           ^
